--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <groupId>Gacho-Style</groupId>
     <artifactId>magazine</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>war</packaging>
     <name>Gacho-Style Magazine</name>
     <description>Gacho Style Magazine</description>
 
@@ -22,6 +23,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
